[package]
name = "lab_06"
version = "0.1.0"
authors = ["Perestoronin Pavel <p_perestoronin@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.7"
